3.3.9 - 30/12/2018
Updated:
- Readme file and added example text file
- Checklist error message
Added:
- Support elilo and grub upgrade boot loader after kernel upgrade

3.3.8 - 09/06/2018
Fixed:
- aria2c (optional downloader) downloading path
Updated:
- Switch to gitlab repository

3.3.7 - 22/04/2018
Fixed:
- Download 'v3.3.6.tar.gz' file [ FAILED ] #109

3.3.6 - 21/04/2018
Fixed:
- pip install with print logo #106

3.3.5 - 01/04/2018
Fixed:
- pip install fails #106
Updated:
- Slackware mirrors

3.3.4 - 10/01/2018
Added:
- Print the file size per package in option -f, --find

3.3.3 - 01/01/2018
Updated:
- README.rst for python modules
- Remove python3 support temporarily until new Slackware version will be
release
- Slackware mirrors

3.3.2 - 21/10/2017
Fixed:
- Strange dependency problem (2) #97
- Msb repository switch to 1.18
Updated:
- Slackware mirrors

3.3.1 - 07/10/2017
Added:
- Set Slackware version via configuration file /etc/slpkg/slpkg.conf
- Set computer architecture via configuration file /etc/slpkg/slpkg.conf

3.3.0 - 01/10/2017
Fixed: 
- TypeError: stat() argument 1 must be encoded string without null bytes,
not str #100
- Check file script before build (IOError: [Errno 2] No such file or
directory: )

3.2.9 - 24/09/2017
Fixed:
- Strange dependency problem #97

Added:
- patches/ directory from slack repository (slpkg -F "slack" fail #98)

3.2.8 - 06/08/2017
Fixed:
- BugFix: Package return after build

Updated:
- Build error message

3.2.7 - 09/04/2017
Updated:
- Alien's repositories {alien, ktown, multi} #83 (Thanks to travis-82)
- Rworkman's repository {rlw} #83
- Package security message for network and sbo repository

Added:
- Sbosrcarch as secondary repository for source files #82 (Thanks to
travis-82)
- Rebuild packages from sbo repository when upgrading #85 (Thanks to bhreach)

3.2.6 - 22/02/2017
Updated:
- Pattern for configuration file

Added:
- Support the special packages who need attention (OpenGL 32-Bits Libs after