@@ -389,8 +389,8 @@ Command Line Tool Usage
       -F | --FIND, [package...], --case-ins      Find packages from each enabled
                                                  repository and view results.
 
-      -f | --find, [package...], --case-ins      Find and print installed packages
-                                                 reporting the size and the sum.
+      -f | --find, [package...], --case-ins,     Find and print installed packages
+           --third-party                         reporting the size and the sum.
 
       -i | --installpkg, [options] [package...]  Installs single or multiple *.tgz
            options=[--warn, --md5sum, --root,    (or .tbz, .tlz, .txz) Slackware
