@@ -139,8 +139,8 @@ Optional arguments:
   -F | --FIND, [package...], --case-ins      Find packages from each enabled
                                              repository and view results.
 
-  -f | --find, [package...], --case-ins      Find and print installed packages
-                                             reporting the size and the sum.
+  -f | --find, [package...], --case-ins,     Find and print installed packages
+       --third-party                         reporting the size and the sum.
 
   -i | --installpkg, [options] [package...]  Installs single or multiple *.tgz
        options=[--warn, --md5sum, --root,    (or .tbz, .tlz, .txz) Slackware
@@ -205,7 +205,7 @@ def usage(repo):
              [-p [repository] [package], --color=[]]
              [-n [SBo package], --checklist, --case-ins]
              [-F [package...], --case-ins]
-             [-f [package...], --case-ins]
+             [-f [package...], --case-ins, --third-party]
              [-i [options] [package...]]
              [-u [options] [package...]]
              [-r [options] [package...], --deps, --check-deps, --tag,
